# matriz-colorida

./: .gitattributes  .gitignore  CMakeLists.txt  Calculadora.cpp  Calculadora.h  Coords.h  GeradorImagem.cpp  GeradorImagem.h  Impressora.cpp  MyMatrix.h  Pixel.cpp  Pixel.h  README.md  a.out  entrada trabalho.txt  main.cpp
assets/: Teste.h
assets/imagensExemplo/exemplosEntrada/: convert_to_ppm.py
assets/imagensExemplo/exemplosSaida/: riscos_50px_cor.ppm  riscos_50px_eficiente_distancia.txt  ufv_eficiente_resumo.txt
imagensExemplo/exemplosEntrada/: convert_to_ppm.py
imagensExemplo/exemplosSaida/: imagem_distancia.txt  riscos_50px_eficiente_cor.ppm
includes/: Coords.h  Impressora.h  hsv2rgb.h
io-examples/: README.txt  hsv2rgb.cpp
io-examples/exemplosSaida/: imagem_cor.ppm  riscos_50px_distancia.txt  ufv_eficiente_distancia.txt
src/: CalculaMenorDistanciaPixelPreto.h  Calculadora.cpp  Calculadora.h  GeradorImagem.cpp  GeradorImagem.h  Impressora.cpp  Impressora.h  Input.cpp  Input.h  MyMatrix.h  MyVec.h  Pixel.cpp  Pixel.h  Teste.h  a.out  entrada.txt  hsv2rgb.cpp  main.cpp
